# ssh-ca

./: .pre-commit-config.yaml  HEADER  README.md  pyproject.toml  ssh-inventory-ansible.yaml  ssh-inventory.yaml  sshca_report_template.html
src/ssh_ca/: cli.py  report.py  sshca_report_template.html
